--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,14 +5,14 @@ spring:
   # datasource
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.21.80.1:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
 
     # redis
   redis:
-    host: 172.21.80.1
-    port: 16379
+    host: localhost
+    port: 56379
     password: redis
 
   # jpa
