FEAT: 引入rocketmq,重新整合了业务逻辑

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,3 +32,8 @@ logging:
     org.hibernate.engine.QueryParameters: debug
     org.hibernate.engine.query.HQLQueryPlan: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
+
+rocketmq:
+  name-server: localhost:9876
+  producer:
+    group: my-group
